# taller_interview

./: .gitignore  README.md  code_challenge.py  main.py  note.ipynb  pyproject.toml
