[project]
name = "taller-interview"
version = "0.1.0"
description = ""
authors = [
    {name = "Davi Luiz Guides",email = "davi.guides@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "polars-lts-cpu (>=1.24.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "cryptography (>=44.0.2,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.0.2"
ipdb = "^0.13.13"
ipykernel = "^6.29.5"
pylint = "^3.3.5"
ruff = "^0.9.10"
pre-commit = "^4.1.0"
ipython-sql = "^0.5.0"
markdown = "^3.7"

